# WirelessMonitor

./: .gitmodules  CMakeLists.txt
.github/workflows/: Windows-Qt6.5.1-Build-Release.yml  Windows-Qt6.5.1-BuildUpdate-ComTool.yml  Windows-Qt6.5.1-BuildUpdate-I2CTool.yml  Windows-Qt6.5.1-BuildUpdate.yml  Windows-Qt6.5.1.yml
api/CH339DLL/: CH347DLL.H  CMakeLists.txt
api/PythonWork/: PythonWork.cpp  PythonWork.h  PythonWorkWithI2C.cpp  PythonWorkWithI2C.h
api/QTextEditWithKey/: QTextEditWithKey.cpp  QTextEditWithKey.h
api/RepeaterWidget/: VersionConfig.h  VersionConfig.h.in
api/USBHandle/: enumser.cpp
components/ComTool/: ComToolHistory.cpp  Comtool.cpp  Comtool.h  comtool.ui
components/IICDeviceBasic/: IICDeviceEach.ui
thirdLib/: CMakeLists.txt
thirdTarget_ComTool/: CMakeLists.txt  mainwindow.cpp
thirdTarget_I2CTool/: CH339Control.cpp  CH339Control.h  CMakeLists.txt  IICDeviceEach.cpp  IICDeviceEach.h  IICDeviceEach.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
thirdTarget_I2CTool/config/: main.ini
thirdTarget_I2CTool/config/AHT10/: AHT10.py  AHT10.xlsx  I2CBase.py
thirdTarget_I2CTool/config/AHT10/lib/: _asyncio_d.pyd  _bz2_d.pyd  _ctypes_d.pyd  _decimal_d.pyd  _elementtree_d.pyd  _hashlib_d.pyd  _lzma_d.pyd  _msi_d.pyd  _multiprocessing_d.pyd  _overlapped_d.pyd  _queue_d.pyd  _socket_d.pyd  _sqlite3_d.pyd  _ssl_d.pyd  _uuid_d.pyd  _zoneinfo_d.pyd  pyexpat_d.pyd  select_d.pyd  unicodedata_d.pyd  winsound_d.pyd
